--- a/DLL_injecter_WinAPI/DLL_injecter_WinAPI/DLL_injecter_WinAPI.vcxproj.filters
+++ b/DLL_injecter_WinAPI/DLL_injecter_WinAPI/DLL_injecter_WinAPI.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Injecter.cpp">
+    <ClCompile Include="Injecter.c">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
