--- a/DLL_injecter_WinAPI/Injectable_DLL/Injectable_DLL.vcxproj
+++ b/DLL_injecter_WinAPI/Injectable_DLL/Injectable_DLL.vcxproj
@@ -41,6 +41,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
+      <CompileAs>CompileAsC</CompileAs>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -52,6 +53,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
+      <CompileAs>CompileAsC</CompileAs>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -60,7 +62,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Test_DLL.cpp" />
+    <ClCompile Include="Test_DLL.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Test_DLL.h" />
